# GumroadTwitterAnalytics

./: db.sqlite3  pyproject.toml  readme.md
config/: settings.py  urls.py
emailasuser/: admin.py  apps.py  models.py
emailasuser/migrations/: 0001_initial.py
twitterbot/: authcheck.py  tweetimport.py  views.py
