[tool.poetry]
name = "newdjangotemplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
tweepy = "^3.10.0"
djangorestframework = "^3.12.4"
pandas = "^1.2.3"
plotly = "^4.14.3"
dash = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
